# mcmc-playground

./: mcmc.py  pyproject.toml
